setting form validity and disabling button if invalid

--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 $bg-primary-dark: #3f3f3f;
-$bg-primary-light: #c8c2bd;
+$bg-primary-light: #dbd7d3;
 $bg-primary-blue: #240370;
 $bg-primary-blue-hover: #33059e;
 $bg-input-violet: #e0d4fd;
